terminationPolicy -> deletionPolicy
