# apis/wizards/v1alpha1/kubedbcom_singlestore_editor_options_types.go
@@ -46,16 +46,16 @@ type KubedbcomSinglestoreEditorOptionsSpecSpec struct {
 	// +optional
 	Annotations map[string]string `json:"annotations"`
 	// +optional
-	Labels            map[string]string   `json:"labels"`
-	Mode              SinglestoreMode     `json:"mode"`
-	TerminationPolicy TerminationPolicy   `json:"terminationPolicy"`
-	StorageClass      StorageClass        `json:"storageClass"`
-	Persistence       Persistence         `json:"persistence"`
-	PodResources      PodResources        `json:"podResources"`
-	Topology          SinglestoreTopology `json:"topology"`
-	AuthSecret        AuthSecret          `json:"authSecret"`
-	Monitoring        Monitoring          `json:"monitoring"`
-	Backup            BackupToolSpec      `json:"backup"`
+	Labels         map[string]string   `json:"labels"`
+	Mode           SinglestoreMode     `json:"mode"`
+	DeletionPolicy TerminationPolicy   `json:"deletionPolicy"`
+	StorageClass   StorageClass        `json:"storageClass"`
+	Persistence    Persistence         `json:"persistence"`
+	PodResources   PodResources        `json:"podResources"`
+	Topology       SinglestoreTopology `json:"topology"`
+	AuthSecret     AuthSecret          `json:"authSecret"`
+	Monitoring     Monitoring          `json:"monitoring"`
+	Backup         BackupToolSpec      `json:"backup"`
 }
 
 // +kubebuilder:validation:Enum=Standalone;Topology
