# charts/kubedbcom-solr-editor-options/values.openapiv3_schema.yaml
@@ -684,6 +684,13 @@ properties:
         required:
         - tool
         type: object
+      deletionPolicy:
+        enum:
+        - Halt
+        - Delete
+        - WipeOut
+        - DoNotTerminate
+        type: string
       labels:
         additionalProperties:
           type: string
@@ -864,13 +871,6 @@ properties:
         required:
         - name
         type: object
-      terminationPolicy:
-        enum:
-        - Halt
-        - Delete
-        - WipeOut
-        - DoNotTerminate
-        type: string
       topology:
         properties:
           coordinator:
@@ -1191,13 +1191,13 @@ properties:
     required:
     - authSecret
     - backup
+    - deletionPolicy
     - mode
     - monitoring
     - persistence
     - podResources
     - replicaSet
     - storageClass
-    - terminationPolicy
     - topology
     - version
     - zookeeperRef
